2007-01-24  Tommi Komulainen  <tommi.komulainen@nokia.com>

	Export only symbols needed for the theme engine ABI

	* src/sapwood-pixmap.h
	* src/sapwood-proto.h
	* src/sapwood-rc-style.h
	* src/sapwood-style.h
	* src/theme-pixbuf.h: Tag internal functions with G_GNUC_INTERNAL to
	avoid symbol leakage.
	* src/Makefile.am: Add check target to verify the ABI.

2007-01-24  Jose Dapena Paz  <jdapena@igalia.com>

	* src/sapwood-server.c (extract_pixmap_single, main,
	get_display_depth): use system default visual depth for all pixmaps.
	This avoids crashing when running maemo desktop in a 24 bits color
	depth X server (bug #856).

2006-10-26  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* === Release 2.43 ===

2006-10-26  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-render.c (theme_pixbuf_render): Limit the mask to
	clip_rect size to avoid allocating huge pixmaps.

2006-10-26  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-render.c (theme_pixbuf_render): Trap X errors to avoid
	BadAlloc when trying to allocate *huge* bitmaps (600x33000 GtkFrame
	in a viewport) NB#35602

2006-10-26  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/Makefile.am (libsapwood_la_CFLAGS): Added to define G_LOG_DOMAIN

2006-06-13  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* === Release 2.24 ===

	* src/sapwood-server.c (pixbuf_open_response_destroy): Don't crash on
	NULL, it's a valid parameter when image loading fails.
	(process_buffer): Failure to load an image is not a client error, do
	not disconnect the client.
	N#32525

2006-05-12  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* === Release 2.19 ===

2006-05-10  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/theme-pixbuf.h (theme_pixbuf_render): Return FALSE when
	rendering fails for any reason
	* src/sapwood-draw.c (draw_simple_image): If rendering fails, do not
	apply window shape mask as it's most likely garbage
	* src/sapwood-render.c (pixmap_cache_value_new,